compiler/testData/cli/jvm/XfragmentSources/kmpMissingActual.out
compiler/testData/cli/jvm/XfragmentSources/kmpMissingActual.common.kt:3:1: error: expected Foo has no actual declaration in module <main> for JVM
expect interface Foo : Base1
^^^^^^
COMPILATION_ERROR
